# cabal-query

./: LICENSE  README.rst  build.sh  cabal-query.cabal  cabalQuery.cabal
src/Distribution/: Query.hs
tests/src/: Main.hs
tests/src/Tests/: Integration.hs
tools/: Main.hs
